// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fonts Renders DescriptionText 1`] = `
<div>
  <p
    class="undefined description"
  >
    Description Text
  </p>
</div>
`;

exports[`Fonts Renders PageTitle 1`] = `
<div>
  <h1>
    Page Title
  </h1>
</div>
`;

exports[`Fonts Renders PrimaryText 1`] = `
<div>
  <p>
    Primary Text
  </p>
</div>
`;

exports[`Fonts Renders SectionTitle 1`] = `
<div>
  <h2>
    Section Title
  </h2>
</div>
`;

exports[`Fonts Renders SubsectionTitle 1`] = `
<div>
  <h3>
    Subsection Title
  </h3>
</div>
`;
